Removed the profile  picture and corrected about text

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             <div class="row">
                 <div class="col-lg-12">
                      <div class="intro-text">
-                        <img  id="mypic" class="img-responsive" src="img/profile.png" alt=""><span class="name">Tech-Social-Preneur</span>
+<!--                        <img  id="mypic" class="img-responsive" src="img/profile.png" alt="">-->
+                            <span class="name">Tech-Social-Preneur</span>
                         
                         <span class="skills">Web Developer - Programmer - Disruptive</span>
                     </div>
@@ -150,10 +151,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Innocent is a passionate about transforming people through technology  and social-based business models. He has a university degree in Project Management Technology where his leadership at Enactus transformed him to a social entreneurship. </p>
+                    <p>Innocent is passionate about transforming people through technology and social-based business models. He has a university degree in Project Management Technology where his fellowship and later leadership at <a href="http://enactus.org"><span>Enactus</span></a> transformed him to an agent of postive change. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Currently, Innocent is an Entrepreneur-In-Training at the prestigous Meltwater Enterprenueral School of Technology <a href="http://www.meltwater.org"><span>(Mest Ghana)</span></a> where he joins of like minded individuals in initiating, developing and scaling software technologies geared at meeting Africa's most challenging prolems.</p>
+                    <p>Currently, Innocent is an Entrepreneur-In-Training at the prestigous Meltwater Enterprenueral School of Technology <a href="http://www.meltwater.org"><span>(Mest Ghana)</span></a> where he joins like-minded individuals in initiating, developing and scaling software technologies geared at meeting Africa's most challenging problems.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                 </div>
