Added picture, removed vegas, cleared links, added content to header

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <p style="text-align:justify;">Innocent is passionate about transforming people through technology and social-based business models. He has a university degree in Project Management Technology. His fellowship and later leadership at <a href="http://enactus.org"><span>Enactus</span></a> has transformed him to an agent of postive change. </p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p style="text-align:justify;">Currently, Innocent is an Entrepreneur-In-Training at the prestigous Meltwater Enterprenueral School of Technology <a href="http://www.meltwater.org"><span>(Mest Ghana)</span></a> where he joins like-minded individuals in initiating, developing and scaling software technologies geared at meeting Africa's most challenging problems.</p>
+                    <p style="text-align:justify;">Currently, Innocent is an Entrepreneur-In-Training at the prestigious Meltwater Enterprenueral School of Technology <a href="http://www.meltwater.org"><span>(Mest Ghana)</span></a> where he joins like-minded individuals in initiating, developing and scaling software technologies geared at meeting Africa's most challenging problems.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                 </div>
