Just correcting typo errors

--- a/index.html
+++ b/index.html
@@ -282,12 +282,12 @@
                             <h2>Ashfort Pharmaceutical</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p><a href="http://ashfortpharma.com">Ashfortpharma.com</a> is n web product I created for Ashfort Pharmaceuticals Limited, a fast growing pharmeceutical firm located at south-eastern Nigeria</p>
+                            <p><a href="http://ashfortpharma.com">Ashfortpharma.com</a> is web product I created for Ashfort Pharmaceuticals Limited, a fast growing pharmeceutical firm located in south-eastern Nigeria</p>
                             <ul class="list-inline item-details">
                                 <li>Client: Ashfort Pharmaceutical Limited, Nigeria
                                 </li>
                                 <li>Date:
-                                    <strong>April 2014
+                                    <strong>April 2012
                                     </strong>
                                 </li>
                                 <li>Service:
@@ -316,12 +316,12 @@
                             <h2>Smart link Products</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>We created <a href="http://www.swaliferesources.com">SwalifeResources.com</a> to enable the client connect seemlessly with its various customers and suppliers.  </p>
+                            <p>We created <a href="http://www.swaliferesources.com">SwalifeResources.com</a> to enable my client connect seemlessly with his various customers and suppliers.  </p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>Jehovabueze and Associates </strong>
                                 </li>
-                                <li>Date: April 2014</li>
+                                <li>Date: March 2012</li>
                                 <li>Service:
                                     <strong>Web Application
                                     </strong>
@@ -349,7 +349,7 @@
                             <h2>Fisherfoundationafrica.Org</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>I colloborated with a team of three in building this beautiful website for non-profit organisation<a href="http://fisherfoundationafrica.org">(Fihser Foundation Africa)</a>. The idea is to serve as a public news center for the entire organisation.</p>
+                            <p>I colloborated with a team of three in building this beautiful website for a non-profit organisation<a href="http://fisherfoundationafrica.org">(Fihser Foundation Africa)</a>. The idea is to facilitate as a news center for the entire organisation and the public.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>Fisher Foundation Africa </strong>
