--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             <h2>Ashfort Pharmaceutical</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p><a href="http://ashfortpharma.com">Ashfortpharma.com</a> is web product I created for Ashfort Pharmaceuticals Limited, a fast growing pharmeceutical firm located in south-eastern Nigeria</p>
+                            <p><a href="http://ashfortpharma.com">Ashfortpharma.com</a> is a web product I created for Ashfort Pharmaceuticals Limited, a fast growing pharmeceutical firm located in south-eastern Nigeria</p>
                             <ul class="list-inline item-details">
                                 <li>Client: Ashfort Pharmaceutical Limited, Nigeria
                                 </li>
