Changed my picture

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         <div class="container">
             <div class="row">
                  <div class="col-lg-4 col-lg-offset-2">
-                     <div class="intro-text">                 <img  id="mypic" class="img-responsive" src="img/profile.png" alt=""> </div>
+                     <div class="intro-text">                 <img  id="mypic" class="img-responsive" src="img/profile.gif" alt=""> </div>
                 </div>
                 <div class="col-lg-4">
-                     <div class="intro-text">                      <span class="name">Tech-Social-Preneur</span>
+                     <div class="intro-text">                      <span class="name"><br>Tech-Social-Preneur</span>
                          <span class="skills">Web Developer | Programmer | Disruptive</span>
                          <br>
                          <code> <span style="color:#F03B00;">public class</span> <span style="color:#42768E">Innocent</span> extends <span style="color:#42768E">Udeogu</span> implements <span style="color:#42768E">SoftwareDeveloper</span>
