Corrected Fisher Spelling- Thanks to William Johnson

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                             <h2>Fisherfoundationafrica.Org</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>I colloborated with a team of three in building this beautiful website for a non-profit organisation<a href="http://fisherfoundationafrica.org">(Fishpower Foundation Africa)</a>. The idea is to facilitate as a news center for the entire organisation and the public.</p>
+                            <p>I colloborated with a team of three in building this beautiful website for a non-profit organisation<a href="http://fisherfoundationafrica.org">(Fisher Foundation Africa)</a>. The idea is to facilitate as a news center for the entire organisation and the public.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>Fisher Foundation Africa </strong>
