Added theme-color to overview and changed color to dark shade

--- a/ubenwaApp/index.html
+++ b/ubenwaApp/index.html
@@ -107,7 +107,7 @@
     </header>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="services" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -120,6 +120,7 @@
                     <span class="fa-stack fa-4x">
                        <img src="img/about/the_challenge.png" class="img-responsive" alt="">
                     </span>
+                    <hr class="hr-overview"></hr>
                     <h4 class="service-heading">The Challenge</h4>
                     <p class="text-muted"> Birth Asphyxia causes death of 1.2 milllion newborns annually with millions suffering from cerebral palsy, amongst other live long disabilities. We seek a low-cost, easy to operate, swift means for diagnosing asphyxia.</p>
                 </div>
@@ -127,6 +128,7 @@
                     <span class="fa-stack fa-4x">
                         <img src="img/about/what_we_are_doing.png" class="img-responsive" alt="">
                     </span>
+                    <hr class="hr-overview"></hr>
                     <h4 class="service-heading">What we are doing</h4>
                     <p class="text-muted">We are applying machine learning and pattern recognition techniques to model cries of normal and asphyxiating babies.</p>
                 </div>
@@ -134,6 +136,7 @@
                     <span class="fa-stack fa-4x">
                         <img src="img/about/what_we_have_achieved.png" class="img-responsive" alt="">
                     </span>
+                    <hr class="hr-overview"></hr>
                     <h4 class="service-heading">What we have achieved</h4>
                     <p class="text-muted">Developed a mobile app that incorporates  our learning algorithm.</p> <p class="text-muted" > <br/>Sensitivity = 100% <br/> Specificity = 88%.</p>
                 </div>
