worked on the stories

--- a/ubenwaApp/index.html
+++ b/ubenwaApp/index.html
@@ -304,53 +304,39 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
+                                    <h4>2009-2013</h4>
                                     <h4 class="subheading">Our Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">We began technical validation to connect newborns cry and Perinatal Asphyxia. During this period, we sought for sample data and iterated on several algorithms for predicting Asphyxia. The result was a unique algorithm.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/tech4dev.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>June 2014</h4>
+                                    <h4 class="subheading">Presentation at UNESCO's Tech4Dev Conference 2014</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Charles presented Ubenwa at the 3rd UNESCO Conference on Technologies for Development at Lausanne, Switzerland.The UNESCO Chair in Technologies for Development hosted by the Cooperation and Development Center (CODEV) offers a high-level platform to take part in cutting-edge discussions in the field of technologies for development, to share information and to network.</p>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/ieeebanner.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>October 2014</h4>
+                                    <h4 class="subheading">Charles attends IEEE GHTC</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Organized by IEEE, the world’s largest technical professional society with over 400,000 members in over 160 countries, IEEE GHTC focuses on advancing technology for the benefit of humanity. </p>
                                 </div>
                             </div>
                         </li>
@@ -449,11 +435,11 @@
     <aside class="clients">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
+                <!-- <div class="col-md-3 col-sm-6">
                     <a href="#">
                         <img src="img/logos/fisher_foundation_logo.png" class="img-responsive img-centered" alt="">
                     </a>
-                </div>
+                </div> -->
                 <!-- <div class="col-md-3 col-sm-6">
                     <a href="#">
                         <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
@@ -501,6 +487,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
+                                    
                                     <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
