--- a/ubenwaApp/index.html
+++ b/ubenwaApp/index.html
@@ -400,9 +400,9 @@
                         <h4>Innocent Udeogu</h4>
                         <p class="text-muted">Developer</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <li><a href="https://twitter.com/innarticle"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://www.facebook.com/udeogu.innocent.k"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
