--- a/ubenwaApp/index.html
+++ b/ubenwaApp/index.html
@@ -407,7 +407,7 @@
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
-                        <p>A fellow of the prestigious Meltwater Entrepreneurial School of Technology (MEST), Innocent has a passion for technology and entrepreneurship. He is founder of Biograde Technologies, and a developer on the Ubenwa project.</p>
+                        <p>An Entrepreneur-In-Training at the prestigious Meltwater Entrepreneurial School of Technology (MEST), Innocent has a passion for technology and entrepreneurship. He is founder of Biograde Technologies, and a developer on the Ubenwa project.</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
@@ -423,7 +423,7 @@
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
-                        <p>A practising medical doctor and surgeon, Eyenimi has a passion for research and innovation. He has been responsible for data analysis as well as providing context-specific perspective in Ubenwa project design and implementation.</p>
+                        <p>A practising medical doctor, Eyenimi has a passion for research and innovation. He has been responsible for data analysis as well as providing context-specific perspective in Ubenwa project design and implementation.</p>
                     </div>
                 </div>
                 
