--- a/index.html
+++ b/index.html
@@ -15,4 +15,15 @@ layout: default
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
     </article>
   {% endfor %}
+  <!-- Start of BotEngine (www.botengine.ai) code -->
+<script type="text/javascript">
+    window._be = window._be || {};
+    window.__be.id = "5b5dc390338f1d0007fd1972";
+    (function() {
+        var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
+        be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.botengine.ai/widget/plugin.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
+    })();
+</script>
+<!-- End of BotEngine code -->
 </div>
