--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-  <!-- Start of BotEngine (www.botengine.ai) code -->
+<!-- Start of BotEngine (www.botengine.ai) code -->
 <script type="text/javascript">
-    window._be = window._be || {};
+    window.__be = window.__be || {};
     window.__be.id = "5b5dc390338f1d0007fd1972";
     (function() {
         var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
