--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: Blog
+permalink: /blog/
 ---
 <!-- Start of BotEngine (www.botengine.ai) code -->
 <script type="text/javascript">
